2026-02-03T01:53:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21613664061 # 866
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-03
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-02T01:54:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21574654508 # 865
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-02
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-15 2026-01-16] / []

2026-01-30T01:47:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21501439660 # 862
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-29 2025-12-30 2025-12-31 2026-01-01 2026-01-02 2026-01-03 2026-01-04 2026-01-05 2026-01-06 2026-01-07 2026-01-08 2026-01-09 2026-01-10 2026-01-11] / []