@@ -1,3 +1,12 @@
+2026-02-04T01:48:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21655152107 # 867
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-04
+* notice: last 14d: unq all: 0 0
+* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
+* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-16 2026-01-17 2026-01-18] / []
+
 2026-02-03T01:53:24Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21613664061 # 866
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-03
